--- a/order-details.html
+++ b/order-details.html
@@ -109,7 +109,7 @@
 
 <div class="container">
     <div class="header">
-        <img src="brinks_logo.png" alt="Brinks Logo">
+        <img src="https://storage.googleapis.com/glide-prod.appspot.com/uploads-v2/9bJYk9GT6IyTBG0O3axw/pub/WUN6P1oA1DyaMrGJa3WT.png" alt="Brinks Logo">
         <h2>Quotation</h2>
     </div>
 
