--- a/order-details.html
+++ b/order-details.html
@@ -3,119 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Print Quotation</title>
+    <title>Quotation</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
             padding: 0;
         }
-
         .container {
-            width: 100%;
-            max-width: 800px;
+            width: 80%;
             margin: auto;
         }
-
         .header {
             text-align: center;
             margin-bottom: 20px;
         }
-
-        .header img {
+        .logo {
             max-width: 150px;
         }
-
-        .table-container {
-            width: 100%;
-            overflow-x: auto;
+        h2, h3 {
+            text-align: center;
         }
-
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
         }
-
-        table, th, td {
-            border: 1px solid black;
-        }
-
         th, td {
+            border: 1px solid black;
             padding: 8px;
-            text-align: left;
+            text-align: center;
         }
-
-        .grand-total {
-            margin-top: 20px;
-            text-align: right;
-            font-size: 18px;
+        .total {
             font-weight: bold;
         }
-
         .signature-container {
             margin-top: 20px;
+            text-align: right;
         }
-
-        canvas {
+        .signature-box {
             border: 1px solid black;
-            width: 100%;
-            height: 150px;
+            width: 200px;
+            height: 100px;
         }
-
-        .btn-container {
-            margin-top: 10px;
-            display: flex;
-            gap: 10px;
-        }
-
-        button {
-            padding: 8px 12px;
-            cursor: pointer;
-        }
-
-        /* Sembunyikan signature pad saat print */
-        @media print {
-            .signature-container { display: none; }
-            #saved-signature-container { display: block; }
-            #print-button { display: none; }
-        }
-
-        /* Area tanda tangan di bawah Grand Total */
-        #saved-signature-container {
+        .hidden {
             display: none;
+        }
+        .print-button {
             margin-top: 20px;
             text-align: center;
-            border: 1px solid #000;
-            padding: 10px;
-            width: 300px;
-            position: absolute;
-            right: 0;
         }
-
-        #saved-signature-container img {
-            width: 100%;
-            border: 1px solid #000;
+        @media print {
+            .print-button, .signature-pad {
+                display: none;
+            }
         }
-
-        #saved-signature-container p {
-            margin: 5px 0;
-            font-weight: bold;
-        }
-
     </style>
 </head>
 <body>
+    <div class="container">
+        <div class="header">
+            <img src="https://storage.googleapis.com/glide-prod.appspot.com/uploads-v2/9bJYk9GT6IyTBG0O3axw/pub/WUN6P1oA1DyaMrGJa3WT.png" alt="Brinks Logo" class="logo">
+            <h2>PT. Brinks Solution Indonesia</h2>
+        </div>
 
-<div class="container">
-    <div class="header">
-        <img src="https://storage.googleapis.com/glide-prod.appspot.com/uploads-v2/9bJYk9GT6IyTBG0O3axw/pub/WUN6P1oA1DyaMrGJa3WT.png" alt="Brinks Logo">
-        <h2>Quotation</h2>
-    </div>
-
-    <p id="customer-headline"><strong>Customer Name :</strong> <span id="customer-name"></span></p>
-
-    <div class="table-container">
+        <h3 id="customerName">Customer Name : </h3>
+        
         <table>
             <thead>
                 <tr>
@@ -128,124 +81,97 @@
                     <th>Total Cost</th>
                 </tr>
             </thead>
-            <tbody id="order-table">
-                <!-- Data dari Glide akan dimasukkan ke sini -->
-            </tbody>
+            <tbody id="orderTable"></tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="6" class="total">Grand Total</td>
+                    <td class="total" id="grandTotal"></td>
+                </tr>
+            </tfoot>
         </table>
-    </div>
 
-    <p class="grand-total">Grand Total: <span id="grand-total"></span></p>
+        <div class="signature-container">
+            <p><strong>Customer Signature</strong></p>
+            <div class="signature-box" id="savedSignature"></div>
+            <p id="signedCustomer"></p>
+        </div>
 
-    <!-- Area tanda tangan di bawah Grand Total -->
-    <div id="saved-signature-container">
-        <p>Customer Signature</p>
-        <img id="saved-signature" src="" alt="Saved Signature">
-        <p id="customer-name-signature"></p>
-    </div>
+        <div class="signature-pad">
+            <canvas id="signatureCanvas" width="300" height="100" style="border:1px solid black;"></canvas><br>
+            <button onclick="clearSignature()">Clear</button>
+            <button onclick="saveSignature()">Save</button>
+        </div>
 
-    <!-- Signature Pad -->
-    <div class="signature-container">
-        <p><strong>Signature:</strong></p>
-        <canvas id="signature-pad"></canvas>
-        <div class="btn-container">
-            <button id="clear-signature">Clear</button>
-            <button id="save-signature">Save</button>
+        <div class="print-button">
+            <button onclick="window.print()">Print PDF</button>
         </div>
     </div>
 
-    <!-- Tombol Print -->
-    <button id="print-button" onclick="window.print()">Print PDF</button>
+    <script>
+        function getQueryParams() {
+            const params = new URLSearchParams(window.location.search);
+            return {
+                customer_name: params.get('customer_name'),
+                orders: params.get('orders'),
+                currency: params.get('currency')
+            };
+        }
 
-</div>
+        function formatCurrency(amount, currency) {
+            return new Intl.NumberFormat('id-ID', {
+                style: 'currency',
+                currency: currency || 'IDR'
+            }).format(amount);
+        }
 
-<script>
-    function getUrlParams() {
-        const params = new URLSearchParams(window.location.search);
-        return params;
-    }
+        function loadOrderData() {
+            const { customer_name, orders, currency } = getQueryParams();
+            document.getElementById('customerName').innerText = Customer Name : ${customer_name};
+            document.getElementById('signedCustomer').innerText = customer_name;
 
-    function loadDataFromGlide() {
-        const params = getUrlParams();
-
-        // Ambil nama customer dari URL
-        const customerName = params.get("customerName") || "Unknown Customer";
-        document.getElementById("customer-name").textContent = customerName;
-
-        // Ambil data order dari URL (encoded JSON)
-        const orderData = params.get("orders");
-
-        if (orderData) {
-            const orders = JSON.parse(decodeURIComponent(orderData));
-            const tableBody = document.getElementById("order-table");
+            const orderTable = document.getElementById('orderTable');
             let grandTotal = 0;
 
-            orders.forEach(order => {
-                const row = document.createElement("tr");
+            if (orders) {
+                const orderList = orders.split(';');
+                orderList.forEach(order => {
+                    const details = order.split('|');
+                    if (details.length === 7) {
+                        const row = document.createElement('tr');
+                        row.innerHTML = `
+                            <td>${details[0]}</td>
+                            <td>${details[1]}</td>
+                            <td>${details[2]}</td>
+                            <td>${details[3]}</td>
+                            <td>${details[4]}</td>
+                            <td>${details[5]}</td>
+                            <td>${formatCurrency(details[6], currency)}</td>
+                        `;
+                        orderTable.appendChild(row);
+                        grandTotal += parseFloat(details[6]);
+                    }
+                });
+            }
 
-                row.innerHTML = `
-                    <td>${order.orderId}</td>
-                    <td>${order.date}</td>
-                    <td>${order.item}</td>
-                    <td>${order.quantity}</td>
-                    <td>${order.from}</td>
-                    <td>${order.to}</td>
-                    <td>${order.totalCost} IDR</td>
-                `;
-
-                tableBody.appendChild(row);
-                grandTotal += parseInt(order.totalCost.replace(/,/g, ""));
-            });
-
-            document.getElementById("grand-total").textContent = grandTotal.toLocaleString() + " IDR";
+            document.getElementById('grandTotal').innerText = formatCurrency(grandTotal, currency);
         }
-    }
 
-    // Signature pad logic
-    const canvas = document.getElementById("signature-pad");
-    const ctx = canvas.getContext("2d");
-
-    let isDrawing = false;
-
-    canvas.addEventListener("mousedown", (e) => {
-        isDrawing = true;
-        ctx.beginPath();
-        ctx.moveTo(e.offsetX, e.offsetY);
-    });
-
-    canvas.addEventListener("mousemove", (e) => {
-        if (isDrawing) {
-            ctx.lineTo(e.offsetX, e.offsetY);
-            ctx.stroke();
+        function clearSignature() {
+            const canvas = document.getElementById('signatureCanvas');
+            const ctx = canvas.getContext('2d');
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
         }
-    });
 
-    canvas.addEventListener("mouseup", () => {
-        isDrawing = false;
-    });
+        function saveSignature() {
+            const canvas = document.getElementById('signatureCanvas');
+            const savedSignature = document.getElementById('savedSignature');
+            const img = new Image();
+            img.src = canvas.toDataURL();
+            savedSignature.innerHTML = '';
+            savedSignature.appendChild(img);
+        }
 
-    canvas.addEventListener("mouseleave", () => {
-        isDrawing = false;
-    });
-
-    document.getElementById("clear-signature").addEventListener("click", () => {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-    });
-
-    document.getElementById("save-signature").addEventListener("click", () => {
-        const signatureDataURL = canvas.toDataURL();
-
-        // Tampilkan tanda tangan di area kanan
-        document.getElementById("saved-signature").src = signatureDataURL;
-        document.getElementById("saved-signature-container").style.display = "block";
-
-        // Ambil nama customer dari headline
-        const customerName = document.getElementById("customer-name").textContent;
-        document.getElementById("customer-name-signature").textContent = customerName;
-    });
-
-    // Load data saat halaman dibuka
-    window.onload = loadDataFromGlide;
-</script>
-
+        window.onload = loadOrderData;
+    </script>
 </body>
 </html>
