--- a/order-details.html
+++ b/order-details.html
@@ -3,71 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quotation</title>
+    <title>Quotation - Brinks</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0;
             padding: 0;
+            text-align: center;
         }
+
+        .header {
+            background: #005A9C;
+            color: white;
+            padding: 20px;
+            position: relative;
+        }
+
+        .header img {
+            position: absolute;
+            left: 20px;
+            top: 10px;
+            width: 100px;
+        }
+
         .container {
             width: 80%;
-            margin: auto;
+            margin: 20px auto;
+            text-align: left;
         }
-        .header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .logo {
-            max-width: 150px;
-        }
-        h2, h3 {
-            text-align: center;
-        }
+
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
         }
+
         th, td {
             border: 1px solid black;
-            padding: 8px;
+            padding: 10px;
             text-align: center;
         }
-        .total {
-            font-weight: bold;
+
+        th {
+            background: #ddd;
         }
+
         .signature-container {
+            display: flex;
+            justify-content: space-between;
             margin-top: 20px;
-            text-align: right;
         }
-        .signature-box {
+
+        .signature-pad {
             border: 1px solid black;
-            width: 200px;
+            width: 300px;
+            height: 100px;
+            position: relative;
+        }
+
+        #signatureImage {
+            width: 300px;
             height: 100px;
         }
-        .hidden {
-            display: none;
-        }
-        .print-button {
-            margin-top: 20px;
+
+        .signature-box {
             text-align: center;
         }
-        @media print {
-            .print-button, .signature-pad {
-                display: none;
-            }
+
+        .button-container {
+            margin-top: 10px;
+        }
+
+        .print-button {
+            background: #005A9C;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <img src="https://storage.googleapis.com/glide-prod.appspot.com/uploads-v2/9bJYk9GT6IyTBG0O3axw/pub/WUN6P1oA1DyaMrGJa3WT.png" alt="Brinks Logo" class="logo">
-            <h2>PT. Brinks Solution Indonesia</h2>
-        </div>
+    <div class="header">
+        <img src="https://storage.googleapis.com/glide-prod.appspot.com/uploads-v2/9bJYk9GT6IyTBG0O3axw/pub/WUN6P1oA1DyaMrGJa3WT.png" alt="Brinks Logo">
+        <h2>PT. Brinks Solution Indonesia</h2>
+    </div>
 
-        <h3 id="customerName">Customer Name : </h3>
+    <div class="container">
+        <h3 id="customerName">Customer Name: </h3>
         
         <table>
             <thead>
@@ -82,29 +105,26 @@
                 </tr>
             </thead>
             <tbody id="orderTable"></tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="6" class="total">Grand Total</td>
-                    <td class="total" id="grandTotal"></td>
-                </tr>
-            </tfoot>
         </table>
 
+        <h3>Grand Total: <span id="grandTotal">0</span></h3>
+
         <div class="signature-container">
-            <p><strong>Customer Signature</strong></p>
-            <div class="signature-box" id="savedSignature"></div>
-            <p id="signedCustomer"></p>
+            <div>
+                <canvas id="signaturePad" class="signature-pad"></canvas>
+                <div class="button-container">
+                    <button onclick="clearSignature()">Clear</button>
+                    <button onclick="saveSignature()">Save</button>
+                </div>
+            </div>
+            <div class="signature-box">
+                <p>Customer Signature</p>
+                <img id="signatureImage" src="" alt="Signature">
+                <p id="signedCustomer"></p>
+            </div>
         </div>
 
-        <div class="signature-pad">
-            <canvas id="signatureCanvas" width="300" height="100" style="border:1px solid black;"></canvas><br>
-            <button onclick="clearSignature()">Clear</button>
-            <button onclick="saveSignature()">Save</button>
-        </div>
-
-        <div class="print-button">
-            <button onclick="window.print()">Print PDF</button>
-        </div>
+        <button class="print-button" onclick="window.print()">Print PDF</button>
     </div>
 
     <script>
@@ -126,52 +146,83 @@
 
         function loadOrderData() {
             const { customer_name, orders, currency } = getQueryParams();
-            document.getElementById('customerName').innerText = Customer Name : ${customer_name};
+
+            document.getElementById('customerName').innerText = Customer: ${customer_name};
             document.getElementById('signedCustomer').innerText = customer_name;
+
+            if (!orders) {
+                console.error("Data orders tidak ditemukan di URL!");
+                return;
+            }
 
             const orderTable = document.getElementById('orderTable');
             let grandTotal = 0;
 
-            if (orders) {
-                const orderList = orders.split(';');
-                orderList.forEach(order => {
-                    const details = order.split('|');
-                    if (details.length === 7) {
-                        const row = document.createElement('tr');
-                        row.innerHTML = `
-                            <td>${details[0]}</td>
-                            <td>${details[1]}</td>
-                            <td>${details[2]}</td>
-                            <td>${details[3]}</td>
-                            <td>${details[4]}</td>
-                            <td>${details[5]}</td>
-                            <td>${formatCurrency(details[6], currency)}</td>
-                        `;
-                        orderTable.appendChild(row);
-                        grandTotal += parseFloat(details[6]);
-                    }
-                });
-            }
+            const orderList = orders.split(';');
+            orderList.forEach(order => {
+                const details = order.split('|');
+                if (details.length === 7) {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td>${details[0]}</td>
+                        <td>${details[1]}</td>
+                        <td>${details[2]}</td>
+                        <td>${details[3]}</td>
+                        <td>${details[4]}</td>
+                        <td>${details[5]}</td>
+                        <td>${formatCurrency(details[6], currency)}</td>
+                    `;
+                    orderTable.appendChild(row);
+                    grandTotal += parseFloat(details[6]);
+                } else {
+                    console.error("Format order tidak sesuai:", order);
+                }
+            });
 
             document.getElementById('grandTotal').innerText = formatCurrency(grandTotal, currency);
         }
 
         function clearSignature() {
-            const canvas = document.getElementById('signatureCanvas');
-            const ctx = canvas.getContext('2d');
+            const canvas = document.getElementById("signaturePad");
+            const ctx = canvas.getContext("2d");
             ctx.clearRect(0, 0, canvas.width, canvas.height);
+            document.getElementById("signatureImage").src = "";
         }
 
         function saveSignature() {
-            const canvas = document.getElementById('signatureCanvas');
-            const savedSignature = document.getElementById('savedSignature');
-            const img = new Image();
-            img.src = canvas.toDataURL();
-            savedSignature.innerHTML = '';
-            savedSignature.appendChild(img);
+            const canvas = document.getElementById("signaturePad");
+            const imageData = canvas.toDataURL("image/png");
+            document.getElementById("signatureImage").src = imageData;
         }
 
-        window.onload = loadOrderData;
+        window.onload = function() {
+            loadOrderData();
+
+            const canvas = document.getElementById("signaturePad");
+            const ctx = canvas.getContext("2d");
+            let drawing = false;
+
+            canvas.addEventListener("mousedown", function(e) {
+                drawing = true;
+                ctx.beginPath();
+                ctx.moveTo(e.offsetX, e.offsetY);
+            });
+
+            canvas.addEventListener("mousemove", function(e) {
+                if (drawing) {
+                    ctx.lineTo(e.offsetX, e.offsetY);
+                    ctx.stroke();
+                }
+            });
+
+            canvas.addEventListener("mouseup", function() {
+                drawing = false;
+            });
+
+            canvas.addEventListener("mouseleave", function() {
+                drawing = false;
+            });
+        };
     </script>
 </body>
 </html>
