--- a/order-details.html
+++ b/order-details.html
@@ -147,7 +147,7 @@
         function loadOrderData() {
             const { customer_name, orders, currency } = getQueryParams();
 
-            document.getElementById('customerName').innerText = Customer: ${customer_name};
+            document.getElementById('customerName').innerText = Customer Name : ${customer_name};
             document.getElementById('signedCustomer').innerText = customer_name;
 
             if (!orders) {
