--- a/order-details.html
+++ b/order-details.html
@@ -10,7 +10,7 @@
       margin: 20px;
     }
 
-    /* Logo dan Header */
+    /* Header dan Logo */
     #logo-container {
       position: relative;
       width: 100%;
@@ -22,9 +22,10 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 55%;
+      width: 50%;
       height: 80px;
       background-color: #000080;
+      clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 0% 100%);
       z-index: 0;
     }
 
@@ -40,7 +41,7 @@
       font-weight: bold;
       margin-bottom: 10px;
     }
-    
+
     #customer-headline {
       font-size: 16px;
       font-weight: normal;
@@ -71,7 +72,7 @@
       padding: 10px;
       text-align: left;
     }
-    
+
     th {
       background-color: #f4f4f4;
     }
@@ -104,8 +105,14 @@
     }
 
     /* Signature Area */
-    .signature-container {
+    .signature-section {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       margin-top: 20px;
+    }
+
+    .signature-container {
       border: 1px solid #000;
       padding: 10px;
       width: 300px;
@@ -129,11 +136,24 @@
       cursor: pointer;
     }
 
+    /* Signature Image (Saved) */
+    .saved-signature {
+      width: 300px;
+      text-align: center;
+      border: 1px solid #000;
+      padding: 10px;
+    }
+
+    .saved-signature img {
+      width: 100%;
+      height: 100px;
+      border: 1px solid #000;
+    }
+
     /* Print */
     @media print {
-      .blue-shape { width: 55%; height: 80px; }
-      #print-pdf-btn { display: none; } /* Tombol hanya hilang saat print */
-      .signature-buttons { display: none; }
+      .blue-shape { width: 50%; height: 80px; }
+      #print-pdf-btn, .signature-container { display: none; } /* Signature Pad hilang */
     }
   </style>
 </head>
@@ -170,14 +190,21 @@
   </table>
 
   <!-- Signature Section -->
-  <div class="signature-container">
-    <p>Customer Signature:</p>
-    <canvas id="signature-pad"></canvas>
-    <div class="signature-buttons">
-      <button id="clear-signature">Clear</button>
-      <button id="save-signature">Save</button>
+  <div class="signature-section">
+    <div class="signature-container">
+      <p>Customer Signature:</p>
+      <canvas id="signature-pad"></canvas>
+      <div class="signature-buttons">
+        <button id="clear-signature">Clear</button>
+        <button id="save-signature">Save</button>
+      </div>
     </div>
-    <img id="signature-image" style="display: none; width: 100%;">
+
+    <div class="saved-signature" id="saved-signature-container" style="display: none;">
+      <p>Customer Signature</p>
+      <img id="signature-image">
+      <p id="customer-name-display"></p>
+    </div>
   </div>
 
   <script>
@@ -199,15 +226,14 @@
       const rows = ordersString.split(";");
       rows.forEach(rowStr => {
         const cols = rowStr.split("|");
-        const formattedDate = new Date(cols[1]).toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' });
         const costValue = parseFloat(cols[6]) || 0;
-        const costFormatted = costValue.toLocaleString() + (foundCurrency !== "N/A" ? " " + foundCurrency : "");
+        const costFormatted = costValue.toLocaleString() + " " + foundCurrency;
         grandTotal += costValue;
 
         tableBody.innerHTML += `
           <tr>
             <td>${cols[0]}</td>
-            <td>${formattedDate}</td>
+            <td>${cols[1]}</td>
             <td>${cols[2]}</td>
             <td>${cols[3]}</td>
             <td>${cols[4]}</td>
@@ -218,33 +244,16 @@
       });
     }
 
-    document.getElementById("grand-total").textContent = grandTotal.toLocaleString() + (foundCurrency !== "N/A" ? " " + foundCurrency : "");
+    document.getElementById("grand-total").textContent = grandTotal.toLocaleString() + " " + foundCurrency;
 
     // Signature Pad Fix
     const canvas = document.getElementById("signature-pad");
     const ctx = canvas.getContext("2d");
-    let drawing = false;
-
-    function startDrawing(event) {
-      drawing = true;
-      ctx.beginPath();
-      ctx.moveTo(event.offsetX || event.touches[0].clientX, event.offsetY || event.touches[0].clientY);
-    }
-
-    function draw(event) {
-      if (!drawing) return;
-      ctx.lineTo(event.offsetX || event.touches[0].clientX, event.offsetY || event.touches[0].clientY);
-      ctx.stroke();
-    }
-
-    function stopDrawing() { drawing = false; }
-
-    canvas.addEventListener("mousedown", startDrawing);
-    canvas.addEventListener("mousemove", draw);
-    canvas.addEventListener("mouseup", stopDrawing);
-    canvas.addEventListener("touchstart", startDrawing);
-    canvas.addEventListener("touchmove", draw);
-    canvas.addEventListener("touchend", stopDrawing);
+    document.getElementById("save-signature").addEventListener("click", () => {
+      document.getElementById("signature-image").src = canvas.toDataURL();
+      document.getElementById("customer-name-display").textContent = decodeParam("customer_name");
+      document.getElementById("saved-signature-container").style.display = "block";
+    });
   </script>
 
 </body>
